# Red-Plasma

RedPlasmaEditor/: CMakeLists.txt
RedPlasmaEditor/src/: main.cpp
RedPlasmaEngine/: CMakeLists.txt
RedPlasmaEngine/core/: Engine.cpp  RP_Result.h
RedPlasmaEngine/core/renderer/: IGraphicsDevice.h
RedPlasmaEngine/include/: Engine.h  IWindowSurface.h  VulkanGraphicsDevice.h  WaylandSurface.h
RedPlasmaEngine/plugins/renderer/vulkan/: VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanWindowSurface.cpp  VulkanWindowSurface.h
RedPlasmaEngine/plugins/renderer/vulkan/platform/linux/wayland/: WaylandSurface.h
RedPlasmaEngine/src/: Engine.cpp  VulkanGraphicsDevice.cpp
